unpackaged/main/default/objects/AssignedResource/fields/Assigned_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Engineer__c</fullName>
    <description>This is the name of the Service Resource</description>
    <label>Assigned Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>