unpackaged/main/default/objects/AssignedResource/fields/Created_Record__c.field-meta.xml
<CustomField>
    <fullName>Created_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to be used in the Assigned resources and Service Appointment process builder. DO NOT EDIT.</description>
    <label>Created Record?</label>
    <type>Checkbox</type>
</CustomField>