unpackaged/main/default/objects/AssignedResource/fields/Engineer_Role__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Role__c</fullName>
    <description>This is the Engineer Role from the Service Resource</description>
    <label>Engineer Role</label>
    <length>55</length>
    <type>Text</type>
</CustomField>