unpackaged/main/default/objects/AssignedResource/fields/NOW_Add_Estimated_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>NOW_Add_Estimated_Travel_Time__c</fullName>
    <description>The time now + Estimated Travel Time</description>
    <formula>NOW()+((EstimatedTravelTime/24)/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time now + Estimated Travel Time</inlineHelpText>
    <label>NOW Add Estimated Travel Time</label>
    <type>DateTime</type>
</CustomField>