unpackaged/main/default/objects/AssignedResource/fields/NOW_Add_Estimated_Travel_Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>NOW_Add_Estimated_Travel_Time_Duration__c</fullName>
    <description>The time now with Estimated Travel Time and Work Order Duration added</description>
    <formula>NOW_Add_Estimated_Travel_Time__c + (Work_Order_Duration__c/24)

/*NOW()+((EstimatedTravelTime/24)/60)+(Work_Order_Duration__c/60)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time now with Estimated Travel Time and Work Order Duration added</inlineHelpText>
    <label>NOW Add Estimated Travel Time + Duration</label>
    <type>DateTime</type>
</CustomField>