unpackaged/main/default/objects/AssignedResource/fields/Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Status__c</fullName>
    <formula>TEXT( ServiceAppointment.Status )</formula>
    <label>Service Appointment Status</label>
    <type>Text</type>
</CustomField>