unpackaged/main/default/objects/AssignedResource/fields/Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Sort_Code__c</fullName>
    <label>Sort Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>