unpackaged/main/default/objects/AssignedResource/fields/Work_Order_Duration__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Duration__c</fullName>
    <description>Work Order Duration</description>
    <formula>ServiceAppointment.Work_Order__r.Duration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Work Order Duration</inlineHelpText>
    <label>Work Order Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>